extends Node2D
# This is the predator code
var mad_science = 0

func _process(_delta):
	if mad_science > 0:
		$sp_zero/asp.show()
		$sp_zero/bsp.show()
		$sp_zero/csp.show()
		$sp_zero/dsp.hide()
		$sp_zero/esp.show()
		$sp_zero/fsp.show()
		$sp_zero/gsp.show()
		$le_zero/ale.show()
		$le_zero/ble.show()
		$le_zero/cle.show()
		$le_zero/dle.show()
		$le_zero/ele.show()
		$le_zero/fle.show()
		$le_zero/gle.show()
		$sp_one/spa.show()
		$sp_one/spb.show()
		$le_one/lea.show()
		$le_one/leb.show()
	if mad_science > 1:
		$sp_zero/asp.hide()
		$sp_zero/bsp.show()
		$sp_zero/csp.show()
		$sp_zero/dsp.show()
		$sp_zero/esp.show()
		$sp_zero/fsp.show()
		$sp_zero/gsp.show()
		$le_zero/ale.show()
		$le_zero/ble.show()
		$le_zero/cle.show()
		$le_zero/dle.show()
		$le_zero/ele.show()
		$le_zero/fle.show()
		$le_zero/gle.hide()
		$sp_one/spa.show()
		$sp_one/spb.hide()
		$le_one/lea.show()
		$le_one/leb.show()
	if mad_science > 2:
		$sp_zero/asp.show()
		$sp_zero/bsp.show()
		$sp_zero/csp.hide()
		$sp_zero/dsp.show()
		$sp_zero/esp.show()
		$sp_zero/fsp.show()
		$sp_zero/gsp.show()
		$le_zero/ale.show()
		$le_zero/ble.show()
		$le_zero/cle.show()
		$le_zero/dle.show()
		$le_zero/ele.hide()
		$le_zero/fle.show()
		$le_zero/gle.show()
		$sp_one/spa.show()
		$sp_one/spb.show()
		$le_one/lea.show()
		$le_one/leb.show()
	if mad_science > 3:
		$sp_zero/asp.show()
		$sp_zero/bsp.show()
		$sp_zero/csp.show()
		$sp_zero/dsp.show()
		$sp_zero/esp.show()
		$sp_zero/fsp.hide()
		$sp_zero/gsp.show()
		$le_zero/ale.show()
		$le_zero/ble.hide()
		$le_zero/cle.show()
		$le_zero/dle.show()
		$le_zero/ele.show()
		$le_zero/fle.show()
		$le_zero/gle.show()
		$sp_one/spa.show()
		$sp_one/spb.show()
		$le_one/lea.hide()
		$le_one/leb.show()
	if mad_science > 4:
		$sp_zero/asp.show()
		$sp_zero/bsp.show()
		$sp_zero/csp.show()
		$sp_zero/dsp.show()
		$sp_zero/esp.show()
		$sp_zero/fsp.show()
		$sp_zero/gsp.show()
		$le_zero/ale.show()
		$le_zero/ble.show()
		$le_zero/cle.show()
		$le_zero/dle.hide()
		$le_zero/ele.show()
		$le_zero/fle.show()
		$le_zero/gle.show()
		$sp_one/spa.show()
		$sp_one/spb.show()
		$le_one/lea.show()
		$le_one/leb.show()
	if mad_science > 5:
		$sp_zero/asp.show()
		$sp_zero/bsp.hide()
		$sp_zero/csp.show()
		$sp_zero/dsp.show()
		$sp_zero/esp.show()
		$sp_zero/fsp.show()
		$sp_zero/gsp.show()
		$le_zero/ale.show()
		$le_zero/ble.show()
		$le_zero/cle.show()
		$le_zero/dle.show()
		$le_zero/ele.show()
		$le_zero/fle.hide()
		$le_zero/gle.show()
		$sp_one/spa.hide()
		$sp_one/spb.show()
		$le_one/lea.show()
		$le_one/leb.show()
	if mad_science > 6:
		$sp_zero/asp.show()
		$sp_zero/bsp.show()
		$sp_zero/csp.show()
		$sp_zero/dsp.show()
		$sp_zero/esp.hide()
		$sp_zero/fsp.show()
		$sp_zero/gsp.show()
		$le_zero/ale.show()
		$le_zero/ble.show()
		$le_zero/cle.hide()
		$le_zero/dle.show()
		$le_zero/ele.show()
		$le_zero/fle.show()
		$le_zero/gle.show()
		$sp_one/spa.show()
		$sp_one/spb.show()
		$le_one/lea.show()
		$le_one/leb.show()
	if mad_science > 7:
		$sp_zero/asp.show()
		$sp_zero/bsp.show()
		$sp_zero/csp.show()
		$sp_zero/dsp.show()
		$sp_zero/esp.show()
		$sp_zero/fsp.show()
		$sp_zero/gsp.hide()
		$le_zero/ale.hide()
		$le_zero/ble.show()
		$le_zero/cle.show()
		$le_zero/dle.show()
		$le_zero/ele.show()
		$le_zero/fle.show()
		$le_zero/gle.show()
		$sp_one/spa.show()
		$sp_one/spb.show()
		$le_one/lea.show()
		$le_one/leb.hide()

func _on_stall_timeout():
	if mad_science > 7:
		mad_science -= 8
	mad_science += 1
	$collect.start()
	$stall.stop()

func _on_collect_timeout():
	mad_science += 1
	$stall.start()
	$collect.stop()

func _on_stall_ready():
	$stall.start()
